--- a/community/eduBase/profile.conf
+++ b/community/eduBase/profile.conf
@@ -40,7 +40,7 @@ displaymanager="sddm"
 
 # unset defaults to given values
 # names must match systemd service names
-enable_systemd=('avahi-daemon' 'bluetooth' 'cronie' 'ModemManager' 'NetworkManager' 'cups' 'tlp' 'haveged' 'apparmor' 'snapd.apparmor' 'snapd' 'fstrim.timer' 'pkgfile-update.timer' 'sshd')
+enable_systemd=('avahi-daemon' 'bluetooth' 'cronie' 'ModemManager' 'NetworkManager' 'cups' 'tlp' 'haveged' 'apparmor' 'snapd.apparmor' 'snapd' 'fstrim.timer' 'pkgfile-update.timer' 'sshd' 'php-fpm' 'httpd' 'mariadb' 'redis' 'nextcloud-cron.timer')
 #enable_systemd=('avahi-daemon' 'bluetooth' 'cronie' 'ModemManager' 'NetworkManager' 'cups' 'tlp' 'tlp-sleep' 'haveged')
 disable_systemd=('pacman-init')
 
